--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -290,3 +290,11 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+
+.reveal .attribution {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 0.5em;
+}
