--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -293,8 +293,10 @@ body {
 
 
 .reveal .attribution {
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 2%;
     font-size: 0.5em;
+
+    z-index: 9999 !important;
 }
